--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -57,13 +57,13 @@
       {% endif %}
 
       {% if release.text %}
-      <div class="title_text_wrapper" >
-        <span class="release_details">
-          <span class="version_wrapper">
+      <div class="title_text_wrapper_alt" >
+        <span class="release_details_alt">
+          <span class="version_wrapper_alt">
             <h3>{{ version }}</h3>
           </span>
           <br>
-          <span class ="details_wrapper">
+          <span class ="details_wrapper_alt">
             <h2>{{ _('{date}')|f(date=release.release_date|l10n_format_date, version=release.version) }} {{ _('{channel}')|f(channel=release.channel) }} Channel</h2>
           </span>
         </span>
@@ -72,9 +72,9 @@
       </div> {% endif %}
 
       {% if not release.text %}
-            <div class="title_text_wrapper_alt" >
-        <span class="release_details_alt">
-          <span class="version_wrapper_alt">
+            <div class="title_text_wrapper" >
+        <span class="release_details">
+          <span class="version_wrapper">
             <h3>{{ version }}</h3>
           </span>
           <span class ="details_wrapper">
@@ -97,7 +97,7 @@
         {% for note in new_features if note.tag =="New" %}
         {% if loop.first %}
         <span class="label_wrapper">
-          <p class="note_label"> <i class="fa fa-star"></i>  NEW </p>
+          <p class="note_label">&nbsp;<i class="fa fa-star"></i>  NEW </p>
         </span>
         {% endif %}
         <span class="note_wrapper">
@@ -120,7 +120,7 @@
         {% for note in new_features if note.tag =="Fixed" %}
         {% if loop.first %}
         <span class="label_wrapper">
-          <p class="note_label"><i class="fa fa-check"></i>  FIXED </p>
+          <p class="note_label">&nbsp;<i class="fa fa-check"></i>  FIXED </p>
         </span>
         {% endif %}
         <span class="note_wrapper">
@@ -143,7 +143,7 @@
         {% for note in new_features if note.tag =="Changed" %}
         {% if loop.first %}
         <span class="label_wrapper">
-          <p class="note_label"><i class="fa fa-refresh"></i>  CHANGED </p>
+          <p class="note_label">&nbsp;<i class="fa fa-refresh"></i>  CHANGED </p>
         </span>
         {% endif %}
         <span class="note_wrapper">
@@ -166,7 +166,7 @@
         {% for note in new_features if note.tag =="Developer" %}
         {% if loop.first %}
         <span class="label_wrapper">
-          <p class="note_label"><i class="fa fa-wrench"></i>  DEVELOPER </p>
+          <p class="note_label">&nbsp;<i class="fa fa-wrench"></i>  DEVELOPER </p>
         </span>
         {% endif %}
         <span class="note_wrapper">
@@ -189,7 +189,7 @@
         {% for note in new_features if note.tag =="HTML5" %}
         {% if loop.first %}
         <span class="label_wrapper">
-          <p class="note_label"><i class="fa fa-code"></i>
+          <p class="note_label">&nbsp;<i class="fa fa-code"></i>
             HTML 5 
           </p>
         </span>
@@ -214,7 +214,7 @@
         {% for note in new_features if note.tag =="Resolved" %}
         {% if loop.first %}
         <span class="label_wrapper">
-          <p class="note_label"><i class="fa fa-thumbs-up"></i>
+          <p class="note_label">&nbsp;<i class="fa fa-thumbs-up"></i>
            RESOLVED </p>
         </span>
         {% endif %}
@@ -241,7 +241,7 @@
           {% for note in known_issues %}
           {% if loop.first %}
           <div class="label_wrapper">
-            <p class="note_label"> <i class="fa fa-ban"></i>  UNRESOLVED </p>
+            <p class="note_label"> &nbsp;<i class="fa fa-ban"></i>  UNRESOLVED </p>
           </div>
           {% endif %}
           <div class="note_wrapper">
