--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -77,7 +77,7 @@
     padding-top: 5px;
 }
 .release_details {
-    width: 40%;
+    width: 100%;
     height: 100%;
     float: left;
     text-align: center;
@@ -88,31 +88,35 @@
     position: relative;
 }
 .version_wrapper {
-    width: 25%;
+    width: 17%;
     left:0;
     top:0;
     float: left;
     text-align: center;
     position: relative;
     padding-top: 10px;
+    display:inline-block;
 }
 .details_wrapper {
     position: relative;
     float: left;
     text-align: center;
-    width: 100%;
+    width: auto;
+    padding-left:15%;
     left:0;
     top:0;
+    padding-top:1.2em;
     height: 100%;
+    display:inline-block;
 }
 .thank_wrapper {
     position: relative;
     float: left;
+    width:70%;
+    padding-left:12%;
     text-align: left;
-    padding-top: 40px;
-    padding-bottom: 20px;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
 .title_text_wrap {
     width: 40%;
@@ -127,11 +131,12 @@
     padding-left: 0px;
     padding-right: 10px;
     padding-top: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     position: relative;
 }
 .version_wrapper_alt {
     height: 100%;
+    width:25%;
     float: left;
     text-align: center;
     position: relative;
@@ -141,8 +146,9 @@
 .details_wrapper_alt {
     position: relative;
     float: left;
-    padding-top:.5em;
+    padding-top:0em;
     display: inline-block;
+    padding-left:10%;
 }
 .title_text_wrap_alt {
     width: 100%;
@@ -160,7 +166,7 @@
     display: none;
 }
 .gray_note {
-    background-color: #DFECFA;
+    background-color: rgba(223, 236, 250, 0.41);
 }
 .blue_note {
     background-color: #FFF;
@@ -255,13 +261,13 @@
     }
     a {} span {
         color: #000;
-        border-radius: 0 6px 6px 0;
-        border-bottom: 5px solid rgba(185, 210, 237, 1);
+        border-radius: 0 0 0 0;
+        border-bottom: 5px solid rgba(0, 150, 221, 0.7);
     }
     li:first-child {
         padding-right: 1px;
         a, span {
-            border-radius: 6px 0 0 6px;
+            border-radius: 0 0 0 0;
         }
     }
     a,
@@ -272,7 +278,7 @@
         .font-size(15px);
         font-weight: 600;
         text-transform: uppercase;
-        border-radius: 0 6px 6px 0;
+        border-radius: 0 0 0 0;
     }
 }
 .space #platform {
@@ -501,6 +507,7 @@ article {
         width: auto;
         position: relative;
         float: left;
+        padding-top:10px;
         font-weight: bold;
         p {
             text-align: left;
@@ -534,7 +541,8 @@ article {
         position: relative;
     }
     .thank_wrapper {
-        width: 100%;
+        width: auto;
+        padding-left:0px;
         height: 100%;
         padding-bottom: 20px;
         padding-top: 5px;
@@ -542,10 +550,10 @@ article {
         text-align: left;
     }
     .version_wrapper {
-        width: 90%;
+        width: 33%;
         height: 100%;
         float: left;
-        padding-left: 10px;
+        padding-left: 33%;
         text-align: left;
         position: relative;
         padding-top: 10px;
@@ -558,19 +566,20 @@ article {
         position: relative;
     }
     .version_wrapper_alt {
-        width: 100%;
+        width: 33%;
         height: 100%;
         float: left;
-        text-align: center;
+        text-align: left;
         position: relative;
         padding-top: 10px;
     }
     .details_wrapper_alt {
         position: relative;
         float: left;
-        text-align: center;
+        text-align: left;
         width: 100%;
         height: 100%;
+        padding-left:0px;
     }
     .notes-head,
     .blueprint .notes-head {
