--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -444,13 +444,14 @@ article {
         margin: @baseLine 10px;
     }
 
-    .section-items {
+    .section-items.tagged {
         > li {
-            padding-left: 0;
+            padding-left: 0px;
+            display:block;
             word-wrap:break-word;
-            width:50%;
+            width:auto;
             span {
-                word-break: break-all;
+            word-wrap:break-word;
             }
         }
 
@@ -461,4 +462,6 @@ article {
             margin: 0 0 .75em;
         }
     }
+
+
 }
