--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -29,6 +29,10 @@
     margin: 0px;
     width: 100%;
 }
+
+#tabzilla:before {
+    background-color: #0C99D5;
+}
 .space #wrapper {
     background-repeat: no-repeat;
     background-position: 0px 180px;
