--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -97,7 +97,7 @@
         {% for note in new_features if note.tag =="New" %}
         {% if loop.first %}
         <span class="label_wrapper">
-          <p class="note_label">&nbsp;<i class="fa fa-star"></i>  {{ _('NEW') }} </p>
+          <p class="note_label">&nbsp;<i class="fa fa-star"></i>  {{ _('new') }} </p>
         </span>
         {% endif %}
         <span class="note_wrapper">
@@ -120,7 +120,7 @@
         {% for note in new_features if note.tag =="Fixed" %}
         {% if loop.first %}
         <span class="label_wrapper">
-          <p class="note_label">&nbsp;<i class="fa fa-check"></i>  {{ _('FIXED') }} </p>
+          <p class="note_label">&nbsp;<i class="fa fa-check"></i>  {{ _('fixed') }} </p>
         </span>
         {% endif %}
         <span class="note_wrapper">
@@ -143,7 +143,7 @@
         {% for note in new_features if note.tag =="Changed" %}
         {% if loop.first %}
         <span class="label_wrapper">
-          <p class="note_label">&nbsp;<i class="fa fa-refresh"></i>  {{ _('CHANGED') }} </p>
+          <p class="note_label">&nbsp;<i class="fa fa-refresh"></i>  {{ _('changed') }} </p>
         </span>
         {% endif %}
         <span class="note_wrapper">
@@ -166,7 +166,7 @@
         {% for note in new_features if note.tag =="Developer" %}
         {% if loop.first %}
         <span class="label_wrapper">
-          <p class="note_label">&nbsp;<i class="fa fa-wrench"></i>  {{ _('DEVELOPER') }} </p>
+          <p class="note_label">&nbsp;<i class="fa fa-wrench"></i>  {{ _('developer') }} </p>
         </span>
         {% endif %}
         <span class="note_wrapper">
@@ -190,7 +190,7 @@
         {% if loop.first %}
         <span class="label_wrapper">
           <p class="note_label">&nbsp;<i class="fa fa-code"></i>
-            {{ _('HTML 5') }}
+            {{ _('html 5') }}
           </p>
         </span>
         {% endif %}
@@ -215,7 +215,7 @@
         {% if loop.first %}
         <span class="label_wrapper">
           <p class="note_label">&nbsp;<i class="fa fa-thumbs-up"></i>
-           {{ _('RESOLVED') }} </p>
+           {{ _('resolved') }} </p>
         </span>
         {% endif %}
         <span class="note_wrapper">
@@ -241,7 +241,7 @@
           {% for note in known_issues %}
           {% if loop.first %}
           <div class="label_wrapper">
-            <p class="note_label"> &nbsp;<i class="fa fa-ban"></i>  {{ _('UNRESOLVED') }} </p>
+            <p class="note_label"> &nbsp;<i class="fa fa-ban"></i>  {{ _('unresolved') }} </p>
           </div>
           {% endif %}
           <div class="note_wrapper">
