--- a/media/css/firefox/family-nav.less
+++ b/media/css/firefox/family-nav.less
@@ -4,18 +4,17 @@
 
 @import "../sandstone/lib.less";
 
-
 // mixin for sprite images
 .fxfamilynav-sprite(@top) {
-    background-image: url(/media/img/firefox/family/nav-sprite6.png);
+    background-image: url(/media/img/firefox/family/nav-sprite7.png);
     background-position: 0 @top;
 
     @media (-webkit-min-device-pixel-ratio: 1.5),
        (                min-resolution: 1.5dppx),
        (                min-resolution: 144dpi) {
 
-        background-image: url(/media/img/firefox/family/nav-sprite6-high-res.png);
-        .background-size(146px 437px);
+        background-image: url(/media/img/firefox/family/nav-sprite7-high-res.png);
+        .background-size(140px 365px);
     }
 }
 
@@ -49,45 +48,16 @@
 }
 
 // tabzilla link
-.fxfamilynav-tabzilla {
+#tabzilla {
     position: absolute;
     top: -2px;
     right: 0;
-    width: 146px;
-    height: 36px;
-
-    a {
-        display: block;
-        width: 100%;
-        height: 100%;
-        .fxfamilynav-sprite(-146px);
-        .image-replaced();
-        position: relative;
-        z-index: 10;
-
-        // switch to inverted tabzilla image
-        @media (max-width: @breakTablet) {
-            .fxfamilynav-sprite(-182px);
-        }
-    }
-
-    &:before {
-        content: '';
-        display: block;
-        width: 88px;
-        height: 26px;
-        background: transparent;
-        position: absolute;
-        left: 28px;
-        top: 0;
-        z-index: 9;
-    }
 }
 
-// change top border color to match inverted tabzilla image
+// change tabzilla color for tablet and below
 @media (max-width: @breakTablet) {
-    #outer-wrapper {
-        border-color: @mozIDBlue;
+    #tabzilla:before {
+        background-color: @mozIDBlue;
     }
 }
 
@@ -98,8 +68,6 @@
     z-index: 10;
     width: 100%;
     height: 160px;
-    border-top: 2px solid #fff;
-    background-color: transparent;
     // Safari 5.1+, Chrome 10+
     background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)),
         -webkit-linear-gradient(top, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
@@ -126,9 +94,9 @@
         }
     }
 
-    // icon for external links
+    // pink arrow icon for external links
     .icon-external {
-        .fxfamilynav-sprite(-218px);
+        .fxfamilynav-sprite(-146px);
         position: relative;
         top: 2px;
         margin-left: 5px;
@@ -163,6 +131,7 @@
 
         .container {
             width: 100%;
+            background: darken(@mozIDBlue, 2%);
         }
     }
 }
@@ -236,6 +205,10 @@
             // any <a>'s within an active <li> have a visible white border
             &.active > a {
                 border-color: #fff;
+
+                @media (max-width: @breakTablet) {
+                    border-color: transparent;
+                }
             }
         }
     }
@@ -298,7 +271,8 @@
                     width: 1px;
                     height: 70px;
                     margin-top: 5px;
-                    .fxfamilynav-sprite(-367px);
+                    // white dotted line
+                    .fxfamilynav-sprite(-295px);
                 }
             }
 
@@ -352,7 +326,8 @@
             }
 
             &.selected:before {
-                .fxfamilynav-sprite(-257px);
+                // white arrow
+                .fxfamilynav-sprite(-185px);
             }
         }
 
@@ -421,14 +396,14 @@
             & > li {
                 float: none;
                 margin: 0;
-                border-bottom: 1px solid rgba(187, 187, 187, 0.6);
+                border-bottom: 1px solid rgba(255, 255, 255, 0.6);
                 padding-right: 0;
 
                 & > a,
                 & > .primary-link {
                     display: block;
                     text-align: center;
-                    color: @mozIDBlue;
+                    color: #fff;
                     padding: 6px @baseLine 4px;
                     .font-size(@largeFontSize);
                     line-height: @largeFontSize;
@@ -521,7 +496,8 @@ html[lang^='en'] .fxfamilynav .subsubnav a {
                 display: inline-block;
                 top: 2px;
                 margin-left: 5px;
-                .fxfamilynav-sprite(-284px);
+                // gray external link arrow
+                .fxfamilynav-sprite(-212px);
                 .transition(all 0.2s ease);
             }
 
@@ -639,6 +615,10 @@ html[lang^='en'] .fxfamilynav .subsubnav a {
 // broken out for readability
 .fxfamilynav-header {
     &.dark {
+        #tabzilla:before {
+            background-color: @mozIDBlue;
+        }
+
         ul {
             li.active {
                 .primary-link,
@@ -657,7 +637,8 @@ html[lang^='en'] .fxfamilynav .subsubnav a {
                 }
 
                 & > li.hassubsubnav:after {
-                    .fxfamilynav-sprite(-297px);
+                    // black dotted line
+                    .fxfamilynav-sprite(-225px);
                 }
             }
         }
@@ -666,7 +647,8 @@ html[lang^='en'] .fxfamilynav .subsubnav a {
             color: #666;
 
             &.selected:before {
-                .fxfamilynav-sprite(-238px);
+                // blue arrow
+                .fxfamilynav-sprite(-166px);
             }
         }
 
@@ -685,8 +667,14 @@ html[lang^='en'] .fxfamilynav .subsubnav a {
 
         // Mobile
         @media (max-width: @breakTablet) {
-            ul li.active .primary-link {
-                border-color: transparent;
+            ul {
+                li.active .primary-link {
+                    border-color: transparent;
+                }
+
+                &.primarynav .primary-link {
+                    color: #fff;
+                }
             }
         }
     }
@@ -706,7 +694,8 @@ html[lang^='en'] .fxfamilynav .subsubnav a {
 
         .fxfamilynav .subnav {
             & > li.hassubsubnav:after {
-                .fxfamilynav-sprite(-297px);
+                // black dotted line
+                .fxfamilynav-sprite(-225px);
             }
 
             a {
@@ -719,7 +708,8 @@ html[lang^='en'] .fxfamilynav .subsubnav a {
         }
 
         .subsubnav a.selected:before {
-            .fxfamilynav-sprite(-238px);
+            // blue arrow
+            .fxfamilynav-sprite(-166px);
         }
 
         .fxfamilynav-tertiarynav-trigger {
