--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -122,7 +122,7 @@
             </div>
           </a>
         </li>
-      {% if LANG == 'en-US' and waffle.switch('patriot-act-home-promo') %}
+      {% if LANG == 'en-US' %}
         <li id="promo-2" class="item promo-small-landscape advocacy" data-name="Help end mass surveillance">
           <a class="panel-link" href="https://sendto.mozilla.org/page/s/section-215-petition?ref=20150414Advocacy_Surveil&amp;utm_campaign=20150414Advocacy_Surveil&amp;utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_content=Advocacy_tile_small">
             <h2>Help end mass surveillance</h2>
