[fix bug 1193909] Fix FxA iframe load order for fx40 firstrun.

--- a/bedrock/firefox/templates/firefox/australis/fx40/firstrun.html
+++ b/bedrock/firefox/templates/firefox/australis/fx40/firstrun.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="rightcol">
-      <iframe id="fxa" scrolling="no" src="{{ settings.FXA_IFRAME_SRC }}?utm_campaign=fxa-embedded-form&amp;utm_medium=referral&amp;utm_source=firstrun&amp;utm_content=fx-{{ version }}&amp;entrypoint=firstrun&amp;service=sync&amp;context=iframe&amp;style=chromeless"></iframe>
+      <iframe id="fxa" scrolling="no" data-src="{{ settings.FXA_IFRAME_SRC }}?utm_campaign=fxa-embedded-form&amp;utm_medium=referral&amp;utm_source=firstrun&amp;utm_content=fx-{{ version }}&amp;entrypoint=firstrun&amp;service=sync&amp;context=iframe&amp;style=chromeless"></iframe>
     </div>
   </div>
 </section>
