More code review changes

--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -259,7 +259,7 @@
         float: left;
         width: 90px;
     }
-    a {} span {
+    span {
         color: #000;
         border-radius: 0;
         border-bottom: 5px solid rgba(0, 150, 221, 0.7);
@@ -334,7 +334,7 @@ article {
         margin: 0 0 .25em;
     }
     p {
-        margin: 0 0 0em;
+        margin: 0;
     }
     .note {
         .font-size(@smallFontSize);
