--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -222,9 +222,41 @@
     }
 }
 
-.note_label::before {
-    content: "\00a0 ";
+#new::before {
+    font-family: 'Font Awesome';
+    content: "\00A0\f005\00A0";
 }
+
+#fixed::before {
+    font-family: 'Font Awesome';
+    content: "\00A0\f00c\00A0";
+}
+
+#changed::before {
+    font-family: 'Font Awesome';
+    content: "\00A0\f021\00A0";
+}
+
+#developer::before {
+    font-family: 'Font Awesome';
+    content: "\00A0\f0ad\00A0";
+}
+
+#html5::before {
+    font-family: 'Font Awesome';
+    content: "\00A0\f121\00A0";
+}
+
+#resolved::before {
+    font-family: 'Font Awesome';
+    content: "\00A0\f164\00A0";
+}
+
+#known::before {
+    font-family: 'Font Awesome';
+    content: "\00A0\f05e\00A0";
+}
+
 .note_label {
     text-align: center;
 }
