--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -501,9 +501,27 @@ article {
         word-wrap: break-word;
         float: right;
         text-align: left;
-        padding-top: 40px;
+        padding-top: 0;
         padding-bottom: 20px;
         padding-left: 0px;
+    }
+
+    .details_wrapper {
+        position: relative;
+        float: left;
+        text-align: left;
+        width: 100%;
+        height: 100%;
+        padding-left:0px;
+    }
+
+    .details_wrapper_alt {
+        position: relative;
+        float: left;
+        text-align: left;
+        width: 100%;
+        height: 100%;
+        padding-left:0px;
     }
     .notes-head {
         h1, h2, p {
