Got rid of the br stuff

--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -156,9 +156,8 @@
               </li>
             </ul>
             {% if loop.last %}
-            <br>
-            <br>
-            <br>
+           <p class="space_div">
+           </p>
             {% endif %}
           </span>
           {% endfor %}
@@ -182,9 +181,8 @@
               </li>
             </ul>
             {% if loop.last %}
-            <br>
-            <br>
-            <br>
+            <p class="space_div">
+           </p>
             {% endif %}
           </span>
           {% endfor %}
@@ -208,9 +206,8 @@
               </li>
             </ul>
             {% if loop.last %}
-            <br>
-            <br>
-            <br>
+            <p class="space_div">
+           </p>
             {% endif %}
           </span>
           {% endfor %}
@@ -234,9 +231,8 @@
               </li>
             </ul>
             {% if loop.last %}
-            <br>
-            <br>
-            <br>
+            <p class="space_div">
+           </p>
             {% endif %}
           </span>
           {% endfor %}
@@ -260,9 +256,8 @@
               </li>
             </ul>
             {% if loop.last %}
-            <br>
-            <br>
-            <br>
+            <p class="space_div">
+           </p>
             {% endif %}
           </span>
           {% endfor %}
@@ -286,9 +281,8 @@
               </li>
             </ul>
             {% if loop.last %}
-            <br>
-            <br>
-            <br>
+           <p class="space_div">
+           </p>
             {% endif %}
           </span>
           {% endfor %}
