--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -261,6 +261,9 @@
     text-align: center;
 }
 
+.space_div {
+    padding-bottom: 30px;
+}
 .firstPlatform {
     padding-left: 40%;
     padding-right: 5%;
