--- a/bedrock/firefox/templates/firefox/dev-firstrun.html
+++ b/bedrock/firefox/templates/firefox/dev-firstrun.html
@@ -77,35 +77,53 @@ data-sync-icon-high-res="{{ static('img/firefox/dev-firstrun/sync-blue-high-res.
       <p>{{_('Get to know the features that make it the most complete browser for building the Web.')}}</p>
     </header>
     <ul class="features">
+    {% if l10n_has_tag('spring_release') %}
       <li class="feature">
-        <a href="https://www.youtube.com/watch?v=1R9_WdXwUsE" rel="external" class="video-play">
-          <img src="{{ static('img/firefox/firstrun/dev/feature-webide.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
+        <a href="https://developer.mozilla.org/docs/Tools/Performance" rel="external">
+          <img src="{{ static('img/firefox/firstrun/dev/feature-performancetools.png') }}" alt="{{ _('Screenshot') }}" class="screenshot">
         </a>
-        <h2>{{_('WebIDE')}}</h2>
-        <p>{{_('Develop, deploy and debug Firefox OS apps directly in your browser, or on a Firefox OS device, with this tool that replaces App Manager.')}}</p>
-        <a href="https://developer.mozilla.org/docs/Tools/WebIDE" rel="external" class="more" data-link-type="learn-more">{{_('Learn more about WebIDE')}}</a>
-        <div class="responsive-video-container">
-          <div class="video" data-video-id="1R9_WdXwUsE"></div>
-        </div>
-      </li>
-      <li class="feature">
-        <a href="https://www.youtube.com/watch?v=eH0R10Ga4Hs" rel="external" class="video-play">
-          <img src="{{ static('img/firefox/firstrun/dev/feature-valence.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
-        </a>
-        <h2>{{_('Valence')}}</h2>
-        <p>{{_('Develop and debug your apps across multiple browsers and devices with this powerful extension that comes pre-installed with Firefox Developer Edition.')}}</p>
-        <a href="https://developer.mozilla.org/docs/Tools/Firefox_Tools_Adapter" rel="external" class="more" data-link-type="learn-more">{{_('Learn more about Valence')}}</a>
+        <h2>{{_('Performance Tools')}}</h2>
+        <p>{{_('Examine your web content’s frame rate, memory consumption and JS profile in a consolidated timeline view to help easily identify and troubleshoot performance bottlenecks.')}}</p>
+        <a href="https://developer.mozilla.org/docs/Tools/Performance" rel="external" class="more">{{_('Learn more about Performance Tools')}}</a>
+        {% if LANG.startswith('en-') %}
+          <br><a href="http://codepen.io/mozhacks/pen/xGgevw?editors=001?utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_campaign=firefox-developer-game&amp;utm_content=firstrun-dev-tour" rel="external" class="more">{{_('Play the game on Codepen')}}</a>
+        {% endif %}
         <div class="responsive-video-container">
           <div class="video" data-video-id="eH0R10Ga4Hs"></div>
         </div>
       </li>
+    {% endif %}
+      <li class="feature">
+        <a href="https://www.youtube.com/watch?v=eQqNfkqIJdw" rel="external" class="video-play">
+          <img src="{{ static('img/firefox/firstrun/dev/feature-inspector-large.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
+        </a>
+        <h2>{{_('Page Inspector')}}</h2>
+        <p>{{_('Examine the HTML and CSS of any Web page and easily modify the structure and layout of a page.')}}</p>
+        <a href="https://developer.mozilla.org/docs/Tools/Page_Inspector" rel="external" class="more">{{_('Learn more about Page Inspector')}}</a>
+        <div class="responsive-video-container">
+          <div class="video" data-video-id="eQqNfkqIJdw"></div>
+        </div>
+      </li>
+    {% if not l10n_has_tag('spring_release') %}
+      <li class="feature">
+        <a href="https://www.youtube.com/watch?v=R_qDaLQ8ghg" rel="external" class="video-play">
+          <img src="{{ static('img/firefox/firstrun/dev/feature-webaudio-large.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
+        </a>
+        <h2>{{_('Web Audio Editor')}}</h2>
+        <p>{{_('Inspect and interact with Web Audio API in real time to ensure that all audio nodes are connected in the way you expect.')}}</p>
+        <a href="https://developer.mozilla.org/docs/Tools/Web_Audio_Editor" rel="external" class="more">{{_('Learn more about Web Audio Editor')}}</a>
+        <div class="responsive-video-container">
+          <div class="video" data-video-id="R_qDaLQ8ghg"></div>
+        </div>
+      </li>
+    {% endif %}
     </ul>
     {% if l10n_has_tag('new_doorhanger') %}
       <div class="notice">
         <h4>{{ _('Important: Sync your new profile') }}</h4>
         <p>
           {{ _('Developer Edition comes with a new profile so you can run it alongside other versions of Firefox.') }} {{ _('To access your bookmarks, browsing history and more, you need to sync the profile with your existing Firefox Account, or create a new one.') }}
-          <a href="https://support.mozilla.org/kb/recover-lost-bookmarks-firefox-developer-edition" rel="external" class="more" data-link-type="learn-more" data-message="Want the old look back?">{{ _('Learn more') }}</a>
+          <a href="https://support.mozilla.org/kb/recover-lost-bookmarks-firefox-developer-edition" rel="external" class="more">{{ _('Learn more') }}</a>
         </p>
       </div>
     {% endif %}
@@ -117,24 +135,26 @@ data-sync-icon-high-res="{{ static('img/firefox/dev-firstrun/sync-blue-high-res.
         <h2>{{_('Features and tools')}}</h2>
       </header>
       <ul class="features">
+      {% if l10n_has_tag('spring_release') %}
         <li class="feature">
-          <a href="https://www.youtube.com/watch?v=eQqNfkqIJdw" rel="external" class="video-play">
-            <img src="{{ static('img/firefox/firstrun/dev/feature-inspector.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
+          <a href="https://www.youtube.com/watch?v=R_qDaLQ8ghg" rel="external" class="video-play">
+            <img src="{{ static('img/firefox/firstrun/dev/feature-webaudio.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
           </a>
-          <h2>{{_('Page Inspector')}}</h2>
-          <p>{{_('Examine the HTML and CSS of any Web page and easily modify the structure and layout of a page.')}}</p>
-          <a href="https://developer.mozilla.org/docs/Tools/Page_Inspector" rel="external" class="more" data-link-type="learn-more">{{_('Learn more about Page Inspector')}}</a>
+          <h2>{{_('Web Audio Editor')}}</h2>
+          <p>{{_('Inspect and interact with Web Audio API in real time to ensure that all audio nodes are connected in the way you expect.')}}</p>
+          <a href="https://developer.mozilla.org/docs/Tools/Web_Audio_Editor" rel="external" class="more">{{_('Learn more about Web Audio Editor')}}</a>
           <div class="responsive-video-container">
-            <div class="video" data-video-id="eQqNfkqIJdw"></div>
+            <div class="video" data-video-id="R_qDaLQ8ghg"></div>
           </div>
         </li>
+      {% endif %}
         <li class="feature">
           <a href="https://www.youtube.com/watch?v=iEDk8o9ehlw" rel="external" class="video-play">
             <img src="{{ static('img/firefox/firstrun/dev/feature-console.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
           </a>
           <h2>{{_('Web Console')}}</h2>
           <p>{{_('See logged information associated with a Web page and use Web Console to interact with Web pages using JavaScript.')}}</p>
-          <a href="https://developer.mozilla.org/docs/Tools/Web_Console" rel="external" class="more" data-link-type="learn-more">{{_('Learn more about Web Console')}}</a>
+          <a href="https://developer.mozilla.org/docs/Tools/Web_Console" rel="external" class="more">{{_('Learn more about Web Console')}}</a>
           <div class="responsive-video-container">
             <div class="video" data-video-id="iEDk8o9ehlw"></div>
           </div>
@@ -145,7 +165,7 @@ data-sync-icon-high-res="{{ static('img/firefox/dev-firstrun/sync-blue-high-res.
           </a>
           <h2>{{_('JavaScript Debugger')}}</h2>
           <p>{{_('Step through JavaScript code and examine or modify its state to help track down bugs.')}}</p>
-          <a href="https://developer.mozilla.org/docs/Tools/Debugger" rel="external" class="more" data-link-type="learn-more">{{_('Learn more about JavaScript Debugger')}}</a>
+          <a href="https://developer.mozilla.org/docs/Tools/Debugger" rel="external" class="more">{{_('Learn more about JavaScript Debugger')}}</a>
           <div class="responsive-video-container">
             <div class="video" data-video-id="OS4AxYFLCIE"></div>
           </div>
@@ -156,20 +176,9 @@ data-sync-icon-high-res="{{ static('img/firefox/dev-firstrun/sync-blue-high-res.
           </a>
           <h2>{{_('Network Monitor')}}</h2>
           <p>{{_('See all the network requests your browser makes, how long each request takes and details of each request.')}}</p>
-          <a href="https://developer.mozilla.org/docs/Tools/Network_Monitor" rel="external" class="more" data-link-type="learn-more">{{_('Learn more about Network Monitor')}}</a>
+          <a href="https://developer.mozilla.org/docs/Tools/Network_Monitor" rel="external" class="more">{{_('Learn more about Network Monitor')}}</a>
           <div class="responsive-video-container">
             <div class="video" data-video-id="w4zSG53Qlbk"></div>
-          </div>
-        </li>
-        <li class="feature">
-          <a href="https://www.youtube.com/watch?v=R_qDaLQ8ghg" rel="external" class="video-play">
-            <img src="{{ static('img/firefox/firstrun/dev/feature-webaudio.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
-          </a>
-          <h2>{{_('Web Audio Editor')}}</h2>
-          <p>{{_('Inspect and interact with Web Audio API in real time to ensure that all audio nodes are connected in the way you expect.')}}</p>
-          <a href="https://developer.mozilla.org/docs/Tools/Web_Audio_Editor" rel="external" class="more" data-link-type="learn-more">{{_('Learn more about Web Audio Editor')}}</a>
-          <div class="responsive-video-container">
-            <div class="video" data-video-id="R_qDaLQ8ghg"></div>
           </div>
         </li>
         <li class="feature">
@@ -178,9 +187,42 @@ data-sync-icon-high-res="{{ static('img/firefox/dev-firstrun/sync-blue-high-res.
           </a>
           <h2>{{_('Style Editor')}}</h2>
           <p>{{_('View and edit CSS styles associated with a Web page, create new ones and apply existing CSS stylesheets to any page.')}}</p>
-          <a href="https://developer.mozilla.org/docs/Tools/Style_Editor" rel="external" class="more" data-link-type="learn-more">{{_('Learn more about Style Editor')}}</a>
+          <a href="https://developer.mozilla.org/docs/Tools/Style_Editor" rel="external" class="more">{{_('Learn more about Style Editor')}}</a>
           <div class="responsive-video-container">
             <div class="video" data-video-id="3kdBvvIZIqU"></div>
+          </div>
+        </li>
+        <li class="feature">
+          <a href="https://www.youtube.com/watch?v=iJ4C7VnIMC8" class="video-play" rel="external">
+            <img src="{{ static('img/firefox/developer/feature-responsive.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
+          </a>
+          <h2>{{ _('Responsive Design View ') }}</h2>
+          <p>{{ _('See how your Website or Web app will look on different screen sizes without changing the size of your browser window.') }}</p>
+          <a href="https://developer.mozilla.org/docs/Tools/Responsive_Design_View" class="more" rel="external">{{ _('Learn more about Responsive Design View') }}</a>
+          <div class="responsive-video-container">
+            <div class="video" data-video-id="iJ4C7VnIMC8"></div>
+          </div>
+        </li>
+        <li class="feature">
+          <a href="https://www.youtube.com/watch?v=1R9_WdXwUsE" class="video-play" rel="external">
+            <img src="{{ static('img/firefox/developer/feature-webide.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
+          </a>
+          <h2>{{_('WebIDE')}}</h2>
+          <p>{{_('Develop, deploy and debug Firefox OS apps directly in your browser, or on a Firefox OS device, with this tool that replaces App Manager.')}}</p>
+          <a href="https://developer.mozilla.org/docs/Tools/WebIDE" class="more" rel="external">{{_('Learn more about WebIDE')}}</a>
+          <div class="responsive-video-container">
+            <div class="video" data-video-id="1R9_WdXwUsE"></div>
+          </div>
+        </li>
+        <li class="feature">
+          <a href="https://www.youtube.com/watch?v=eH0R10Ga4Hs" class="video-play" rel="external">
+            <img src="{{ static('img/firefox/developer/feature-valence.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
+          </a>
+          <h2>{{_('Valence')}}</h2>
+          <p>{{_('Develop and debug your apps across multiple browsers and devices with this powerful extension that comes pre-installed with Firefox Developer Edition.')}}</p>
+          <a href="https://developer.mozilla.org/docs/Tools/Firefox_Tools_Adapter" class="more" rel="external">{{_('Learn more about Valence')}}</a>
+          <div class="responsive-video-container">
+            <div class="video" data-video-id="eH0R10Ga4Hs"></div>
           </div>
         </li>
       </ul>
